overflow: hidden; /*calskroll fix*/ layout

--- a/src/components/calendar/daypreview.module.scss
+++ b/src/components/calendar/daypreview.module.scss
@@ -40,6 +40,7 @@
         color: primary-midnightblue;
         padding-left: 0;
         padding: 0 0.5rem 0 0;
+        overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
         & > li {
             padding-left: 1vw;
